# 2526-itp4-p2-Keba-Energy-weichja

./: .cache.sqlite  .gitignore  README.md
docs/: diary-jaw.md
src/: awattartest.py  pyproject.toml
src/keba/: train_pytourch.py  tsfc_python.py
src/keba/data/: .part  level_1_test_submission.csv
