[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "openmeteo-requests>=1.7.5",
    "pandas>=3.0.2",
    "pytouch>=0.4.0",
    "requests>=2.33.1",
    "requests-cache>=1.3.1",
    "scipy>=1.17.1",
]
